--- a/ДИПЛОМНА_site/templates/header.html
+++ b/ДИПЛОМНА_site/templates/header.html
@@ -1,4 +1,5 @@
 <header class="pageHeader">
 <h2>Ветеринарен Кабинет</h2>
 <a href="./index.php"><img class="img-responsive" src="images/header/logo.png" alt="logo" /></a>
+<p>ASD</p>
 </header>
