--- a/ДИПЛОМНА_site/templates/header.html
+++ b/ДИПЛОМНА_site/templates/header.html
@@ -1,5 +1,6 @@
 <header class="pageHeader">
 <h1>Ветеринарен Кабинет</h1>
+<h2>GGGG</h2>
 <a href="./index.php"><img class="img-responsive" src="images/header/logo.png" alt="logo" /></a>
 <p>ASD</p>
 </header>
