Added new doctor information in footer.html

--- a/ДИПЛОМНА_site/templates/footer.html
+++ b/ДИПЛОМНА_site/templates/footer.html
@@ -12,6 +12,7 @@
 		<p>Д-р Богдан Филипов <br>тел: 0878 640316</p>
 		<p>Д-р Дарина Филипова <br>тел: 0878 630316 </p>
 		<p>Д-р Ирина Илиева <br>тел: 0878 937631</p>
+		<p>Д-р Богдан Филипов <br>тел: 0878 640316</p>
 	</div>
 	<div class="col-lg-3 col-lg-offset-1 col-sm-12">
 		<ul>
